<resources>
    <string name="app_name">Notive</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="facebook_app_id">Your app Id</string>
    <string name="fb_login_protocol_scheme">Your login protocol scheme</string>
    <string name="welcome">Welcome</string>
    <string name="welcomeAvatar">WelcomeAvatar</string>
    <string name="email_address">Email address</string>
    <string name="your_email">Your email</string>
    <string name="your_password">Your password</string>
    <string name="Password">Password</string>
    <string name="forget_your_password">Forget your password ?</string>
    <string name="LogIn">LogIn</string>
    <string name="SignIn">SignIn</string>
    <string name="PasswordRest">Password rest</string>
    <string name="PasswordRestInstruction">Enter your email and we will send a link to go back into your account</string>
    <string name="Send">Send</string>
    <string name="AddInformation">Add information</string>
    <string name="FullName">Full name</string>
    <string name="YourFullName">Your full name</string>
    <string name="City">City</string>
    <string name="YourCity">Your city</string>
    <string name="Country">Country</string>
    <string name="YourCountry">Your country</string>
    <string name="Address1">Address 1</string>
    <string name="Address2">Address 2</string>
    <string name="zip">Zip</string>
    <string name="Save">Save</string>
    <string name="EditMyInformation">Edit my nformation</string>
    <string name="please_wait">Please Wait ...</string>

</resources>